<resources>
    <string name="app_name">SoundClient</string>
    <string name="slider_text">Volume slider</string>
    <string name="play_pause_button_text">Play/Pause</string>
    <string name="volume_step_up_button_text">Volume +</string>
    <string name="volume_step_down_button_text">Volume -</string>
    <string name="volume_text">Volume_text</string>
    <string name="next_media_text">Next media</string>
    <string name="previous_media_text">Prev media</string>
</resources>